# worldwake

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
brainstorming/: emergent-prototype-spec.md  phase-1-foundations-alignment-correction.md
crates/worldwake-ai/: Cargo.toml
crates/worldwake-ai/src/: agent_tick.rs  budget.rs  candidate_generation.rs  decision_runtime.rs  decision_trace.rs  enterprise.rs  failure_handling.rs  goal_explanation.rs  goal_model.rs  goal_policy.rs  goal_switching.rs  institutional_queries.rs  interrupts.rs  journey_switch_policy.rs  lib.rs  plan_revalidation.rs  plan_selection.rs  planner_ops.rs  planning_snapshot.rs  planning_state.rs  pressure.rs  ranking.rs  search.rs
crates/worldwake-ai/tests/: golden_ai_decisions.rs  golden_care.rs  golden_combat.rs  golden_determinism.rs  golden_e2e.rs  golden_emergent.rs  golden_offices.rs  golden_production.rs  golden_social.rs  golden_supply_chain.rs  golden_trade.rs
crates/worldwake-ai/tests/golden_harness/: mod.rs  timeline.rs
crates/worldwake-cli/: Cargo.toml
crates/worldwake-cli/src/: commands.rs  display.rs  lib.rs  main.rs  repl.rs
crates/worldwake-cli/src/handlers/: actions.rs  control.rs  events.rs  inspect.rs  mod.rs  persistence.rs  tick.rs  world_overview.rs
crates/worldwake-cli/src/scenario/: mod.rs  types.rs
crates/worldwake-cli/tests/: integration.rs
docs/: FOUNDATIONS.md  archival-workflow.md  dampening-audit-phase2.md  golden-e2e-coverage.md  golden-e2e-scenarios.md  golden-e2e-testing.md  precision-rules.md
reports/: 2026-03-21-combat-commitment-substrate.md  e13-decision-architecture-technical-context.md  golden-e2e-coverage-analysis.md  iterative-improvement-logic.md  phase1-foundations-alignment.md
scenarios/: default.ron
scripts/: golden_inventory.py  test_golden_inventory.py  verify.sh
specs/: DRAFT-commodity-opportunity-valuation.md  DRAFT-exclusive-facility-access-queues.md  DRAFT-merchant-selling-market-presence.md  DRAFT-merchant-stock-storage-and-stalls.md  DRAFT-production-output-ownership-claims.md  (+55 more)
(+1184 files in other folders)
