[package]
name = "worldwake-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
worldwake-core = { path = "../worldwake-core" }
worldwake-sim = { path = "../worldwake-sim" }
worldwake-systems = { path = "../worldwake-systems" }

[dev-dependencies]
bincode = "1"

[lints]
workspace = true
