[package]
name = "worldwake-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
worldwake-core = { path = "../worldwake-core" }
worldwake-sim = { path = "../worldwake-sim" }
worldwake-systems = { path = "../worldwake-systems" }
worldwake-ai = { path = "../worldwake-ai" }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
